--- a/package.json
+++ b/package.json
@@ -4,16 +4,12 @@
   "description": "Single-file Emoji",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./scripts/test.js",
     "build": "./scripts/generate-sources.js && ./node_modules/webpack/bin/webpack.js --mode production --display-modules"
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "jszip": "git+https://github.com/Stuk/jszip.git"
-  },
   "devDependencies": {
-    "etc-js": "git+https://github.com/superp00t/etc-js.git",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2"
   }
